# Projects_OPP

./: CMakeLists.txt
.github/workflows/: ci.yml
part1-threads/: CMakeLists.txt
part1-threads/src/: KnightSelection.cpp  KnightSelection.hpp
part1-threads/tests/: test_knight_selection.cpp
part2-openmp/: CMakeLists.txt
part2-openmp/data/: karamazov.txt  karamazov_sample.txt  test_book.txt  Достоевский Федор. Том 9. Братья Карамазовы - royallib.ru.txt
part2-openmp/scripts/: run_analysis.sh  run_benchmark.sh
part2-openmp/src/: book_analyzer.cpp  book_analyzer.hpp  integral_calculator.cpp  integral_calculator.hpp  main.cpp
part2-openmp/tests/: test_book_analyzer.cpp  test_integral.cpp
part3-mpi/: CMakeLists.txt  run_mpi.sh
part3-mpi/src/: CityCapture.cpp  CityCapture.hpp  main.cpp
part3-mpi/tests/: test_city_capture.cpp
src/: KnightSelection.cpp  KnightSelection.hpp  main.cpp
tests/: test_knight_selection.cpp
